crates/agm-core/tests/snapshots/normalize_integration__both_present_different_report.snap
---
source: crates/agm-core/tests/normalize_integration.rs
expression: "&report"
---
rewrites: []
warnings:
  - code: collision_keeping_canonical
    message: "field 'depends' and synonym 'depends_on' both present on node 'n1' with different values — keeping canonical"
    node_id: n1
    span: "[span]"
rules_applied: []
