crates/agm-core/tests/snapshots/normalize_integration__depends_on_universal_report.snap
---
source: crates/agm-core/tests/normalize_integration.rs
expression: "&report"
---
rewrites:
  - rule_id: field.workflow.depends
    node_id: worker.node
    before: depends_on
    after: depends
    span: "[span]"
warnings: []
rules_applied:
  - field.workflow.depends
