crates/agm-core/tests/snapshots/normalize_integration__phases_synonym_report.snap
---
source: crates/agm-core/tests/normalize_integration.rs
expression: "&report"
---
rewrites:
  - rule_id: field.orchestration.parallel_groups
    node_id: plan2
    before: phases
    after: parallel_groups
    span: "[span]"
warnings: []
rules_applied:
  - field.orchestration.parallel_groups
